[tool.poetry]
name = "repl_python3_DIVI"
version = "0.1.0"
description = ""
authors = ["CaKa12 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
tkinterhtml = "^0.7"
tkhtmlview = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
